removed ModifierTier